Edit location Endpoint & Test
