# storage/api-docs/api-docs.json
@@ -135,6 +135,26 @@
                                 }
                             }
                         }
+                    },
+                    "404": {
+                        "description": "Location not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Location not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -295,6 +315,101 @@
                                                     "The longitude field is required."
                                                 ]
                                             }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/edit-location/{id}": {
+            "put": {
+                "tags": [
+                    "Location"
+                ],
+                "summary": "Edit an existing location",
+                "description": "Edit a location.\n\nThis endpoint allows you to edit an existing location by providing the location ID\nand the fields you want to update, such as latitude, longitude, name, and marker color.",
+                "operationId": "6705e0e9e1a9eb417beb85279320b480",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the location to edit",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "latitude": {
+                                        "type": "number",
+                                        "example": 40.748817
+                                    },
+                                    "longitude": {
+                                        "type": "number",
+                                        "example": -73.985428
+                                    },
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Updated Location"
+                                    },
+                                    "marker_color": {
+                                        "type": "string",
+                                        "example": "#222222"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Location updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Location updated successfully"
+                                        },
+                                        "location": {
+                                            "$ref": "#/components/schemas/Location"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Location not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Location not found"
                                         }
                                     },
                                     "type": "object"
